--- a/index.html
+++ b/index.html
@@ -50,6 +50,21 @@
    
    </section>
 
+   <section class="hi" >
+       <div class="fifth-secction">
+           <h2>My Future Aim</h2>
+
+           <p>I want to work in a large IT farm in near future. I want to learn more and more, because learning has to limit for everyone. I predict that I will be able to reach my goal and pay a valuable affort in the IT sector in our country.</p>
+
+       </div>
+
+
+       <div class="man" >
+        <h2>My Dedication</h2>
+
+        <p>I will give my full atemt and my 100% dedication for your company. I will work with my full responsibitlity.</p>
+       </div>
+   </section>
 
     
 </body>
