--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
         <p>I will give my full atemt and my 100% dedication for your company. I will work with my full responsibitlity.</p>
        </div>
-   </section>
-
+   </section>  
+<p class="goal">Thanks For Visiting. Copyright 2021.</p>
     
 </body>
 </html>
